--- a/css/index.css
+++ b/css/index.css
@@ -55,6 +55,15 @@ html, body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
 }
+header {
+    display: inline-block;
+}
+#large{
+    margin:0 35%
+}
+nav a{
+    text-decoration:none;
+}
 
 h1, h2, h3, h4, h5 {
     font-size: 18px;
