--- a/css/index.css
+++ b/css/index.css
@@ -62,26 +62,28 @@ header {
     justify-content:space-evenly;
     margin:0 20% 0 10%;
     padding-top:2%;
+    width:80%;
 }
 #large{
     margin:0 20%;
    padding-bottom: 1%
 }
-#logo {
-    margin-left:10%;
+header #logo {
+    margin-left:6%;
+    padding-bottom:3%;
 }
 nav{
   
    display:inline;
    width:60%;
-   
+   margin-top:3%
   
    
 }
 nav a{
     text-decoration:none;
-    margin:0 5%;
-    
+    margin:5% 5%;
+    color:black;
 }
 
 h1, h2, h3, h4, h5 {
@@ -92,6 +94,9 @@ h1, h2, h3, h4, h5 {
 
 p {
     line-height: 1.4;
+}
+ #box1{
+    background-color:teal;
 }
 
 .container {
@@ -129,16 +134,108 @@ p {
     justify-content: space-evenly;
 }
 
-.middle-content .boxes .box {
+.middle-content .boxes .box1 {
     width: 12.5%;
     height: 100px;
-    background: black;
+    background-color:teal;
     margin: 20px 2.5%;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+    .middle-content .boxes .box2 {
+        width: 12.5%;
+        height: 100px;
+        background-color:gold;
+        margin: 20px 2.5%;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .middle-content .boxes .box3 {
+        width: 12.5%;
+        height: 100px;
+        background: cadetblue;
+        margin: 20px 2.5%;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .middle-content .boxes .box4 {
+        width: 12.5%;
+        height: 100px;
+        background:coral;
+        margin: 20px 2.5%;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .middle-content .boxes .box5 {
+        width: 12.5%;
+        height: 100px;
+        background:crimson;
+        margin: 20px 2.5%;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .middle-content .boxes .box6 {
+        width: 12.5%;
+        height: 100px;
+        background: forestgreen;
+        margin: 20px 2.5%;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .middle-content .boxes .box7 {
+        width: 12.5%;
+        height: 100px;
+        background-color:darkorchid;
+        margin: 20px 2.5%;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .middle-content .boxes .box8 {
+        width: 12.5%;
+        height: 100px;
+        background: hotpink;
+        margin: 20px 2.5%;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .middle-content .boxes .box9 {
+        width: 12.5%;
+        height: 100px;
+        background: indigo;
+        margin: 20px 2.5%;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .middle-content .boxes .box10 {
+        width: 12.5%;
+        height: 100px;
+        background: dodgerblue;
+        margin: 20px 2.5%;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+
 
 .bottom-content {
     display: flex;
