--- a/css/index.css
+++ b/css/index.css
@@ -12,39 +12,44 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display: block;
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
+
 ol, ul {
-	list-style: none;
+    list-style: none;
 }
+
 blockquote, q {
-	quotes: none;
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
+
+    blockquote:before, blockquote:after,
+    q:before, q:after {
+        content: '';
+        content: none;
+    }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 * {
@@ -55,36 +60,37 @@ html, body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
 }
+
 header {
     display: flex;
-    flex-wrap:wrap;
-   
-    justify-content:space-evenly;
-    margin:0 20% 0 10%;
-    padding-top:2%;
-    width:80%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 0 20% 0 10%;
+    padding-top: 2%;
+    width: 80%;
 }
-#large{
-    margin:0 20%;
-   padding-bottom: 1%
+
+#large {
+    margin: 0 20%;
+    padding-bottom: 1%
 }
+
 header #logo {
-    margin-left:6%;
-    padding-bottom:3%;
+    margin-left: 6%;
+    padding-bottom: 3%;
 }
-nav{
-  
-   display:inline;
-   width:60%;
-   margin-top:3%
-  
-   
+
+nav {
+    display: inline;
+    width: 60%;
+    margin-top: 3%
 }
-nav a{
-    text-decoration:none;
-    margin:5% 5%;
-    color:black;
-}
+
+    nav a {
+        text-decoration: none;
+        margin: 5% 5%;
+        color: black;
+    }
 
 h1, h2, h3, h4, h5 {
     font-size: 18px;
@@ -95,9 +101,8 @@ h1, h2, h3, h4, h5 {
 p {
     line-height: 1.4;
 }
- #box1{
-    background-color:teal;
-}
+
+
 
 .container {
     width: 800px;
@@ -112,56 +117,60 @@ p {
     border-bottom: 1px dashed black;
 }
 
-.top-content .text-container {
-    width: 48%;
-    padding: 0 1%;
-    padding-bottom: 20px;  
-}
+    .top-content .text-container {
+        width: 48%;
+        padding: 0 1%;
+        padding-bottom: 20px;
+    }
 
 .middle-content {
-    display:flex;
-    flex-wrap:wrap;
+    display: flex;
+    flex-wrap: wrap;
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
 }
 
-.middle-content h2 {
-    padding: 0 2%;
-    margin-bottom: 0;
-}
+    .middle-content h2 {
+        padding: 0 2%;
+        margin-bottom: 0;
+    }
 
-.middle-content .boxes {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
-.middle-content button{
-    background-color:white;
-    border:1px solid black;
-    width:10%;
-    border-radius:15%;
-     
-}
-.middle-content .boxes .box1 {
-    width: 12.5%;
-    height: 100px;
-    background-color:teal;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-    .middle-content .boxes .box2 {
+    .middle-content .boxes {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width:100%;
+    }
+
+    .middle-content button {
+        background-color: white;
+        border: 1px solid black;
+        width: 10%;
+        border-radius: 15%;
+    }
+
+    .middle-content .boxes .box1 {
         width: 12.5%;
         height: 100px;
-        background-color:gold;
+        background-color: teal;
         margin: 20px 2.5%;
         color: white;
         display: flex;
         align-items: center;
         justify-content: center;
     }
+
+    .middle-content .boxes .box2 {
+        width: 12.5%;
+        height: 100px;
+        background-color: gold;
+        margin: 20px 2.5%;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     .middle-content .boxes .box3 {
         width: 12.5%;
         height: 100px;
@@ -172,26 +181,29 @@ p {
         align-items: center;
         justify-content: center;
     }
+
     .middle-content .boxes .box4 {
         width: 12.5%;
         height: 100px;
-        background:coral;
+        background: coral;
         margin: 20px 2.5%;
         color: white;
         display: flex;
         align-items: center;
         justify-content: center;
     }
+
     .middle-content .boxes .box5 {
         width: 12.5%;
         height: 100px;
-        background:crimson;
+        background: crimson;
         margin: 20px 2.5%;
         color: white;
         display: flex;
         align-items: center;
         justify-content: center;
     }
+
     .middle-content .boxes .box6 {
         width: 12.5%;
         height: 100px;
@@ -202,16 +214,18 @@ p {
         align-items: center;
         justify-content: center;
     }
+
     .middle-content .boxes .box7 {
         width: 12.5%;
         height: 100px;
-        background-color:darkorchid;
+        background-color: darkorchid;
         margin: 20px 2.5%;
         color: white;
         display: flex;
         align-items: center;
         justify-content: center;
     }
+
     .middle-content .boxes .box8 {
         width: 12.5%;
         height: 100px;
@@ -222,6 +236,7 @@ p {
         align-items: center;
         justify-content: center;
     }
+
     .middle-content .boxes .box9 {
         width: 12.5%;
         height: 100px;
@@ -232,6 +247,7 @@ p {
         align-items: center;
         justify-content: center;
     }
+
     .middle-content .boxes .box10 {
         width: 12.5%;
         height: 100px;
@@ -242,38 +258,52 @@ p {
         align-items: center;
         justify-content: center;
     }
-
-
-
-.bottom-content {
+.container about-page {
+    width: 12.5%;
+    
+    margin: 20px 2.5%;
+    color: white;
     display: flex;
-    margin: 0 2% 20px;
-    justify-content: space-around;
+    
+    justify-content: space-evenly
+}
+.container about-page .text-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
 }
 
-.bottom-content .text-container {
-    padding-right: 4%;
-}
 
-.bottom-content .text-container:last-child {
-    padding-right: 0;
-}
+    .bottom-content {
+        display: flex;
+        margin: 0 2% 20px;
+        justify-content: space-around;
+    }
+
+    .bottom-content .text-container {
+        padding-right: 4%;
+    }
+
+        .bottom-content .text-container:last-child {
+            padding-right: 0;
+        }
 
 footer {
     width: 100%;
     background: black;
 }
 
-footer nav {
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 2%;
-    font-size: 14px;
-}
+    footer nav {
+        width: 60%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px 2%;
+        font-size: 14px;
+    }
 
-footer nav a {
-    color: white;
-    text-decoration: none;
-}
+        footer nav a {
+            color: white;
+            text-decoration: none;
+        }
