--- a/css/index.css
+++ b/css/index.css
@@ -115,6 +115,7 @@ p {
     justify-content: space-evenly;
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
+    
 }
 
     .top-content .text-container {
@@ -247,6 +248,17 @@ p {
         align-items: center;
         justify-content: center;
     }
+    .container-about-page{
+        width:60%;
+       margin:2% 20%;
+       
+
+      
+    }
+    .container-about-page .text-container{
+        width:100%;
+
+    }
 
     .middle-content .boxes .box10 {
         width: 12.5%;
@@ -258,20 +270,42 @@ p {
         align-items: center;
         justify-content: center;
     }
-.container about-page {
-    width: 12.5%;
-    
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    
-    justify-content: space-evenly
+ .boxes{
+   width:100%;
+   display:flex;
+   justify-content:center;
+   flex-wrap:wrap;
+   
 }
-.container about-page .text-container {
+
+
+
+ .box {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 20px;
+    width:47%;
+    
+    margin-top:3%;
+    margin-bottom:3%;
+   margin-left:2%;
+}
+
+
+ .box .text-container {
+    
+    width:90%;
+    font-size:16px;
     border-bottom: 1px dashed black;
+    padding:3%;
+  
+}
+ button{
+    background-color:white;
+    border-radius:5px;
+    border:2px solid black;
+    width:40%;
+    padding:3%;
+    
 }
 
 
